[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/fray/editor/input_map/input_map_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/fray/editor/input_map/input_list.gd" type="Script" id=2]

[node name="Fray Input Map" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 827.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="InputNameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 827.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
visible = false
margin_left = 614.0
margin_top = 5.0
margin_right = 813.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.470588, 0.419608, 1 )
text = "Input '%s' name already exists."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 831.0
margin_right = 983.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Type: "

[node name="InputTypeSelector" type="OptionButton" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 42.0
margin_right = 152.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 0 )
text = "Bind"
items = [ "Bind", null, false, 0, null, "Combination", null, false, 1, null, "Conditional", null, false, 2, null ]
selected = 0

[node name="AddInputButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 987.0
margin_right = 1024.0
margin_bottom = 24.0
disabled = true
text = "Add"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 250.0
margin_bottom = 572.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="InputList" type="Tree" parent="VBoxContainer/HSplitContainer/ScrollContainer"]
margin_right = 250.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 262.0
margin_right = 1024.0
margin_bottom = 572.0

[node name="Panel" type="Panel" parent="VBoxContainer/HSplitContainer/MarginContainer"]
margin_right = 762.0
margin_bottom = 572.0

[node name="InspectorContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/MarginContainer"]
margin_right = 762.0
margin_bottom = 572.0

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="SelectBindPopup" type="PopupMenu" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_top = 33.0
margin_bottom = 163.0
rect_min_size = Vector2( 105, 130 )
custom_constants/vseparation = 5
custom_constants/hseparation = 0
items = [ "Select Bind", null, 0, false, false, -1, 0, null, "", true, "Action", null, 0, false, false, 0, 0, null, "", false, "Joy Axis", null, 0, false, false, 1, 0, null, "", false, "Joy Button", null, 0, false, false, 2, 0, null, "", false, "Key", null, 0, false, false, 3, 0, null, "", false, "Mouse Button", null, 0, false, false, 4, 0, null, "", false ]
hide_on_checkable_item_selection = false

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/InputNameEdit" to="." method="_on_InputNameEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/InputNameEdit" to="." method="_on_InputNameEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/AddInputButton" to="." method="_on_AddInputButton_pressed"]
[connection signal="delete_input_request" from="VBoxContainer/HSplitContainer/ScrollContainer/InputList" to="." method="_on_InputList_delete_input_request"]
[connection signal="input_selected" from="VBoxContainer/HSplitContainer/ScrollContainer/InputList" to="." method="_on_InputList_input_selected"]
[connection signal="id_pressed" from="Control/SelectBindPopup" to="." method="_on_SelectBindPopup_id_pressed"]
